Refactor player management logic and improve error handling for duplicate player names

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <div class="mb-3">
                             <label for="playerName" class="form-label">Nome do Jogador</label>
                             <input type="text" class="form-control" id="playerName" required>
-                            <div id="nameError" class="text-danger mt-1" style="display: none;">Nome já existe!</div>
+                            <div id="nameError" class="text-danger mt-1"></div>
                         </div>
                         <button type="submit" class="btn btn-primary">Adicionar</button>
                     </form>
