--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contador de Vidas</title>
+    <title>Contador</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container my-4">
-        <h1 class="text-center">Contador de Vidas</h1>
+        <h1 class="text-center">Contador</h1>
         <div class="d-flex justify-content-center my-3">
             <button class="btn btn-outline-primary me-2" data-bs-toggle="modal" data-bs-target="#addPlayerModal">
-                <i class="bi bi-person-plus"></i> Adicionar Jogador
+                <i class="bi bi-plus-circle"></i> Adicionar Contador
             </button>
             <button class="btn btn-outline-warning me-2" id="resetAllBtn">
                 <i class="bi bi-arrow-counterclockwise"></i> Zerar Todos
